Copy code copy mode

--- a/index.html
+++ b/index.html
@@ -4,41 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
     <title>Progress Bar</title>
   </head>
   <body>
-    <div class="skill">
-      <div class="outer">
-        <div class="inner">
-          <div id="number"></div>
-        </div>
-      </div>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        version="1.1"
-        width="160px"
-        height="160px"
-      >
-        <defs>
-          <linearGradient id="GradientColor">
-            <stop offset="0%" stop-color="var(--gold-color)" />
-            <stop offset="100%" stop-color="var(--gold-color)" />
-          </linearGradient>
-        </defs>
-        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
-      </svg>
+    <h1>Front-End challenge: Progress Indicator</h1>
+    <p>
+      My solution to the
+      <a href="https://piccalil.li/blog/challenge-009-progress-indicator/"
+        >progress indicator challenge</a
+      >, as part of the
+      <a href="https://piccalil.li/category/front-end-challenges-club/"
+        >Front-End Challenges Club on Piccalilli</a
+      >.
+    </p>
+    <!-- NOTES:
+     - styling <progress> is possible, but takes a lot of extra work with annoying prefixed stuff
+       so will be using role="progressbar" and other aria features. I *think* this is okay 😅.
+     - Those attributes are all added via JS, this has the added benefit that it's only a
+       progress bar if JS is enabled.
+     - I think this makes the most sense, since we can't really track progress of an action 
+       if there is no JS.
+     - Maybe it's better to have a progress with an indeterminate value though? But I'm making the
+       assumption that it's the progress of an action a user is taking, in which case, it doesn't
+       make sense to have a progressbar if there's no JS, since we can't keep track then. 
+     - Further, maybe it's best to simply `display: none` the entire thing in that case, but that
+       would be very much context dependent.
+-->
+    <div class="progressbar">
+      <!--  you probably want a more useful message here  -->
+      <span>This <em>really awesome feature</em> requires JS 😢</span>
     </div>
-    <script>
-      let number = document.getElementById("number");
-      let counter = 0;
-      setInterval(() => {
-        if (counter == 66) {
-          clearInterval();
-        } else {
-          counter += 1;
-          number.textContent = counter + "%";
-        }
-      }, 30);
-    </script>
+
+    <div class="testing-ground">
+      <h2>Testing ground</h2>
+      <button data-progress="0">0%</button>
+      <button data-progress="25">25%</button>
+      <button data-progress="57">57%</button>
+      <button data-progress="82">82%</button>
+      <button data-progress="100">100%</button>
+      <button data-progress="fake-upload">
+        Simulate a thing that takes a long time to do
+      </button>
+    </div>
   </body>
 </html>
